<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".View.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/purple_border"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/purple_border"
                android:drawableStart="@drawable/baseline_person_pin_24"
                android:drawablePadding="8dp"
                android:hint="@string/Email"
                android:padding="8dp"
                android:textColor="@color/purple" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/purple_border"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password1"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/purple" />


            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="203dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="onClick"
                android:padding="8dp"
                android:text="@string/forgot_password"
                android:textColor="@color/purple"
                android:textSize="18sp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                android:onClick="onClick"
                android:text="@string/login1"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/signupRedirectText"
                android:layout_width="204dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="onClick"
                android:padding="8dp"
                android:text="@string/not_yet_registered_"
                android:textColor="@color/purple"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>