<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignupActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <ImageButton
            android:id="@+id/customBackButton"
            android:layout_width="67dp"
            android:layout_height="54dp"
            android:layout_margin="18dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/backbutton"
            android:onClick="onClick"
            android:src="@drawable/ic_custom_back_arrow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/purple_border">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up1"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/purple_border"
                android:drawableLeft="@drawable/baseline_person_pin_24"
                android:drawablePadding="8dp"
                android:hint="@string/FirstName"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/lastName"
                android:background="@drawable/purple_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/LastName"
                android:drawableLeft="@drawable/baseline_person_pin_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/Id_Number"
                android:background="@drawable/purple_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/IdNumber"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_email"
                android:background="@drawable/purple_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:drawableLeft="@drawable/baseline_email"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/editTextPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/purple_border"
                android:padding="8dp"
                android:hint="Phone Number"
                android:inputType="phone"
                android:drawableLeft="@drawable/baseline_person_pin_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_password"
                android:background="@drawable/purple_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <Switch
                android:id="@+id/switchAccountType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textOff="Employee"
                android:textOn="Proprietor/Manager"
                android:text="Manager Account?"/>

            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/purple"
                android:onClick="onClick"
                android:text="@string/create_account"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                app:toggleCheckedStateOnClick="false" />

            <TextView
                android:id="@+id/loginRedirectText_ls"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="onClick"
                android:padding="8dp"
                android:text="@string/already_an_user_login"
                android:textColor="@color/purple"
                android:textSize="18sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>